# Tetris

./: CMakeLists.txt
src/: dup_main  main.cpp
